# mrkdata

./: COPYING  README.md  configure.ac  do-it
src/: Makefile.am  diag.txt  fparser.c  fparser.h  mrkdata.c  mrkdata.h  mrkdata_private.h
src/test/: Makefile.am  data-00  data-01  data-02  data-03  data-04  testfoo.c  testfparser.c
